--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -79,8 +79,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                tools:listitem="@layout/item_data_sapi"
-                android:layout_below="@id/searchView">
+                tools:listitem="@layout/item_data_sapi">
 
             </androidx.recyclerview.widget.RecyclerView>
 
