--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -39,13 +39,13 @@
                     android:textColor="@color/white"
                     android:textSize="25sp" />
 
-<!--                <Button-->
-<!--                    android:id="@+id/btn_Search"-->
-<!--                    android:layout_width="40dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:layout_marginHorizontal="6dp"-->
-<!--                    android:layout_marginTop="5dp"-->
-<!--                    android:background="@drawable/search1" />-->
+                <Button
+                    android:id="@+id/btn_Search"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginHorizontal="6dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/search1" />
             </LinearLayout>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
