--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView2"
         android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="350dp"
         android:background="#97C648"
-        android:fontFamily="@font/anton"
+        android:fontFamily="sans-serif-black"
         android:text="PENGUKURAN"
-        android:textSize="15sp"
         android:textAllCaps="false"
-        android:layout_marginHorizontal="15dp"/>
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/button1"
@@ -58,7 +58,7 @@
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="15dp"
         android:background="#97C648"
-        android:fontFamily="@font/anton"
+        android:fontFamily="sans-serif-black"
         android:text="HASIL PENGUKURAN"
         android:textAllCaps="false"
         android:textSize="15sp" />
@@ -70,12 +70,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button1"
         android:layout_centerHorizontal="true"
-        android:background="#97C648"
-        android:fontFamily="@font/anton"
-        android:text="DATA SAPI"
-        android:textSize="15sp"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:background="#97C648"
+        android:fontFamily="sans-serif-black"
+        android:text="DATA SAPI"
+        android:textSize="15sp" />
+
     <Button
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Colored"
@@ -83,12 +84,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button3"
         android:layout_centerHorizontal="true"
-        android:background="#97C648"
-        android:fontFamily="@font/anton"
-        android:text="Grafik"
-        android:textSize="15sp"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:background="#97C648"
+        android:fontFamily="sans-serif-black"
+        android:text="Grafik"
+        android:textSize="15sp" />
 
 
 </RelativeLayout>
