--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="grey_200">#AFAFAF</color>
     <color name="black">#101010</color>
     <color name="greewhite">#CEDFB9</color>
+    <color name="yyy">#F6DD04</color>
 </resources>
