--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="350dp"
-        android:background="#97C648"
+        android:background="@drawable/background_item3"
         android:text="PENGUKURAN"
         android:textAllCaps="false"
         android:textSize="16sp"
@@ -57,7 +57,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="15dp"
-        android:background="#97C648"
+        android:background="@drawable/background_item3"
         android:text="HASIL PENGUKURAN"
         android:textAllCaps="false"
         android:textSize="16sp"
@@ -72,24 +72,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="15dp"
-        android:background="#97C648"
+        android:background="@drawable/background_item3"
         android:text="DATA SAPI"
         android:textSize="16sp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button2"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="15dp"
-        android:background="#97C648"
-        android:textStyle="bold"
-        android:text="Grafik"
-        android:textSize="16sp" />
 
 
 </RelativeLayout>
