--- a/app/src/main/res/layout/activity_input_data.xml
+++ b/app/src/main/res/layout/activity_input_data.xml
@@ -97,15 +97,14 @@
         android:layout_marginRight="10dp"
         android:hint="Input Nama Sapi" />
 
-    <EditText
+    <Spinner
         android:id="@+id/editJekel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/editNama"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:hint="Input Jenis Kelamin Sapi" />
+        android:layout_marginRight="10dp"/>
 
 <!--    <EditText-->
 <!--        android:id="@+id/editUmur"-->
