--- a/app/src/main/res/layout/activity_input_data.xml
+++ b/app/src/main/res/layout/activity_input_data.xml
@@ -104,7 +104,16 @@
         android:layout_below="@id/editNama"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp" />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:id="@+id/view2"
+        android:layout_below="@id/editJekel"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="15dp"
+        android:background="@color/grey_200"/>
 
     <LinearLayout
         android:layout_width="match_parent"
